force-app/main/default/objects/Sales_Receipt_Line_Item__c/Sales_Receipt_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Sales Receipt Line Item</label>
    <nameField>
        <displayFormat>SRL-{0000}</displayFormat>
        <label>Sales Receipt Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Receipt Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>