force-app/main/default/objects/Sales_Receipt_Line_Item__c/fields/Detail_Type__c.field-meta.xml
<CustomField>
    <fullName>Detail_Type__c</fullName>
    <label>Detail Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>