force-app/main/default/objects/Sales_Receipt_Line_Item__c/fields/Item_Reference__c.field-meta.xml
<CustomField>
    <fullName>Item_Reference__c</fullName>
    <label>Item Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>