force-app/main/default/objects/Sales_Receipt_Line_Item__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <label>Line</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>