force-app/main/default/objects/Sales_Receipt_Line_Item__c/fields/Percent_Based__c.field-meta.xml
<CustomField>
    <fullName>Percent_Based__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Percent Based</label>
    <type>Checkbox</type>
</CustomField>