force-app/main/default/objects/Sales_Receipt_Line_Item__c/fields/Sales_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Sales_Receipt__c</fullName>
    <label>Sales Receipt</label>
    <referenceTo>Sales_Receipt__c</referenceTo>
    <relationshipLabel>Sales Receipt Line Items</relationshipLabel>
    <relationshipName>Sales_Receipt_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>